# i3d-agent-system

./: .env  .gitignore  AGENTS.md  Agent技术方案设计文档.md  CLAUDE.md  README.md  pyproject.toml  requirements.txt
backend/: config.py  main.py
backend/agents/: __init__.py  analysis_agent.py  base.py  qa_agent.py  recommendation_agent.py  search_agent.py
backend/api/: __init__.py  deps.py
backend/api/routes/: __init__.py  chat.py  health.py  upload.py
backend/core/: __init__.py  agent_controller.py  llm_router.py  state_manager.py  stream_handler.py
backend/db/: __init__.py  repositories.py  session.py
backend/graph/: __init__.py  edges.py  nodes.py  state.py  workflow.py
backend/models/: __init__.py  enums.py  schema.py
backend/rag/: __init__.py  document_processor.py  embeddings.py  hybrid_search.py  reranker.py  retriever.py
backend/services/: __init__.py  cache_service.py  mq_service.py  tenant_service.py
backend/tests/: conftest.py
backend/tests/integration/: test_api.py
backend/tests/unit/: test_agents.py
backend/tools/: __init__.py  cad_search.py  file_analyzer.py  metadata_query.py  similarity_search.py
backend/utils/: __init__.py  helpers.py  logger.py  tracer.py
config/: settings.yaml
docker/: Dockerfile  docker-compose.yml  prometheus.yml
frontend/: Dockerfile  index.html  nginx.conf
frontend/css/: style.css
frontend/js/: app.js
